# llm

./: README.md
chat-boat/: README.md  main.py  pyproject.toml  scraper.py
hello-gemini/: README.md  hello-gemini.py  main.py  pyproject.toml
hello-open-ai/: README.md  hello-open-ai-api.py  hello-open-ai.py  main.py  pyproject.toml
website-brochure-app/: README.md  huggingface_brochure.md  main.py  pyproject.toml  spitertech_brochure.md
website-summary-app/: main.py  pyproject.toml
website-summary-opensource-olama/: README.md  main.py  pyproject.toml
website-summary-opensource-ollama/: README.md  pyproject.toml
