[project]
name = "website-summary-opensource-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ipython>=9.12.0",
    "openai>=2.30.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
]
